--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,20 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.couple {
+  display: inline-block;
+  position: relative;
+  width: 32px;
+}
+
+.couple:after {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 48px;
+  top: 0px;
+  left: -8px;
+  border-top: solid 2px black;
+  border-bottom: solid 2px black;
+}
